bk_ida/gccida/g3/reset_used_decls
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reset_used_decls/src/emit-rtl.c:2883:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reset_used_decls/src/emit-rtl.c:2886:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node **p_chain; // [rsp+18h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reset_used_decls/src/emit-rtl.c:3030:20: error: expected expression
v35 = ( tree_node *)i5[5]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reset_used_decls/src/emit-rtl.c:3030:9: error: use of undeclared identifier 'tree_node'
v35 = ( tree_node *)i5[5]; 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reset_used_decls/src/obj/emit-rtl.o] Error 1
